# donfig

./: .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  DASK_LICENSE.txt  LICENSE.txt  MANIFEST.in  README.rst  RELEASING.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci.yaml  deploy-sdist.yaml
continuous_integration/: environment.yaml
doc/: conf.py  configuration.rst  index.rst  installation.rst
doc/_static/: config_converter.js  style.css
doc/api/: donfig.rst
donfig/: __init__.py  _config.py  _lock.py  config_obj.py  utils.py  version.py
donfig/tests/: test_config.py  test_lock.py
